# intelligent_research_report_generator

./: .dockerignore  .env.example  .gitignore  AWS_Deployment.md  Development_Plan.md  Development_log.md  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
data/: .gitkeep
docs/: AWS_DEPLOYMENT.md
frontend/: app.py
models/: .gitkeep
scripts/: deploy-ecr.sh
src/: __init__.py  config.py
src/agent/: __init__.py  graph.py  nodes.py  state.py
src/api/: __init__.py  main.py
src/db/: __init__.py  cache.py  models.py  vector_store.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  embeddings.py  generate_training_data.py  query_classifier.py  train.py
src/utils/: __init__.py
terraform/: main.tf  terraform.tfvars.example
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_embeddings.py  test_evaluation.py  test_query_classifier.py
