[project]
name = "intelligent-research-report-generator"
version = "0.1.0"
description = "Production-ready research report generation using multi-agent orchestration"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
