[project]
name = "intelligent-research-report-generator"
version = "0.1.0"
description = "Production-ready research report generation using multi-agent orchestration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core LLM/Agent framework
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    # Search
    "tavily-python>=0.5.0",
    # Embeddings & ML
    "sentence-transformers>=3.0.0",
    "transformers>=4.45.0",
    "scikit-learn>=1.5.0",
    "faiss-cpu>=1.8.0",
    "torch>=2.0.0",
    # Database
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    # Cache
    "redis>=5.0.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"